# Search-Engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  config_window.h  engine.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  request_edit.ui  requests.json  tests.cpp
GUI/: CMakeLists.txt  config.json  config_window.cpp  config_window.h  config_window.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  requests.json
GUI/include/: converter_json.h  engine_core.h  exceptions.h  file_index.h  inverted_index.h  requestadddialog.h
GUI/source/: converter_json.cpp  engine_core.cpp  file_index.cpp  inverted_index.cpp  requestadddialog.cpp
GUI/ui/: ui_main_window.cpp
include/: comand_line_processor.h  converter_json.h  engine_core.h  exceptions.h  file_index.h  inverted_index.h  mainwindow.h  requestadddialog.h
source/: comand_line_processor.cpp  converter_json.cpp  engine_core.cpp  exceptions.cpp  file_index.cpp  inverted_index.cpp  mainwindow.cpp  request_dialog.cpp  requestadddialog.cpp
ui/: ui_config_window.cpp  ui_main_window.cpp  ui_request_dialog.cpp
